tests/neg-custom-args/safe-init/simple-1h.scala
class Foo(n: String @scala.annotation.partial) {
  foo(new Foo("Jack"))         // error: recursive creation

  val name: String = n
  name.length                 // error

  private def foo(o: Foo) = o.name
}